login-register-reset-frontend

--- a/src/app/pages/login/forgot-pswd/forgot-pswd.component.html
+++ b/src/app/pages/login/forgot-pswd/forgot-pswd.component.html
@@ -1,13 +1,10 @@
 <form>
-    <h3>Login Here</h3>
+    <h3>Reset password</h3>
 
-    <label for="username">Username</label>
+    <label for="username">Email</label>
     <input type="text" placeholder="Email or Phone" id="username">
 
-    <label for="password">Password</label>
-    <input type="password" placeholder="Password" id="password">
-
-    <button>Log In</button>
+    <button>Submit</button>
     <div class="social">
         <div class="fb" (click)="back()" style="cursor: pointer;"><i class="fab"></i>Back</div>
     </div>
