--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,1 +1,18 @@
-<p>register works!</p>
+<form>
+    <h3>Register Here</h3>
+
+    <label for="emaik">Email</label>
+    <input type="text" placeholder="Email" id="email">
+
+    <label for="password">Password</label>
+    <input type="password" placeholder="Password" id="password">
+
+    <label for="password-again">Password Again</label>
+    <input type="password" placeholder="Password Again" id="password-again">
+
+    <button>Log In</button>
+    <div class="social">
+        <div class="fb" routerLink="/register" style="cursor: pointer;"><i class="fab"></i>Login</div>
+      <div class="fb" (click)="back()" style="cursor: pointer;"><i class="fab"></i>Back</div>
+    </div>
+</form>
