--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -12,7 +12,7 @@
 
     <button>Log In</button>
     <div class="social">
-        <div class="fb" routerLink="/register" style="cursor: pointer;"><i class="fab"></i>Login</div>
+        <div class="fb" routerLink="/register" style="cursor: pointer;"><i class="fab"></i>Register</div>
       <div class="fb" (click)="back()" style="cursor: pointer;"><i class="fab"></i>Back</div>
     </div>
 </form>
