--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -10,9 +10,9 @@
     <label for="password-again">Password Again</label>
     <input type="password" placeholder="Password Again" id="password-again">
 
-    <button>Log In</button>
+    <button>Register</button>
     <div class="social">
-        <div class="fb" routerLink="/register" style="cursor: pointer;"><i class="fab"></i>Register</div>
+        <div class="fb" routerLink="/login" style="cursor: pointer;"><i class="fab"></i>Log in</div>
       <div class="fb" (click)="back()" style="cursor: pointer;"><i class="fab"></i>Back</div>
     </div>
 </form>
