--- a/src/app/pages/shows/shows.component.html
+++ b/src/app/pages/shows/shows.component.html
@@ -1,1 +1,5 @@
-<app-shows-dashboard></app-shows-dashboard> 
+<mat-tab-group>
+    <mat-tab label="Dashboard"><app-shows-dashboard></app-shows-dashboard></mat-tab>
+    <mat-tab label="Second"> Content 2 </mat-tab>
+    <mat-tab label="Adress"><app-adress></app-adress></mat-tab>
+  </mat-tab-group>
