--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -5,7 +5,7 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menü</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/home" routerLinkActive="active">Home</a>
+      <a mat-list-item routerLink="/home" routerLinkActive="active">Movies</a>
       <a mat-list-item routerLink="/shows" routerLinkActive="active">Shows</a>
       <a mat-list-item routerLink="/login" routerLinkActive="active">Login</a>
       <a mat-list-item routerLink="/register" routerLinkActive="active">Register</a>
