--- a/src/app/pages/login/forgot-pswd/forgot-pswd.component.scss
+++ b/src/app/pages/login/forgot-pswd/forgot-pswd.component.scss
@@ -1,56 +1,13 @@
-*,
-*:before,
-*:after{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-body{
-    background-color: #080710;
-}
-.background{
-    width: 430px;
-    height: 520px;
-    position: absolute;
-    transform: translate(-50%,-50%);
-    left: 50%;
-    top: 50%;
-}
-.background .shape{
-    height: 200px;
-    width: 200px;
-    position: absolute;
-    border-radius: 50%;
-}
-.shape:first-child{
-    background: linear-gradient(
-        #1845ad,
-        #23a2f6
-    );
-    left: -80px;
-    top: -80px;
-}
-.shape:last-child{
-    background: linear-gradient(
-        to right,
-        #ff512f,
-        #f09819
-    );
-    right: -30px;
-    bottom: -80px;
-}
 form{
-    height: 400px;
+    height: 300px;
     width: 400px;
-    background-color: rgba(255,255,255,0.13);
-    position: absolute;
-    transform: translate(-50%,-50%);
-    top: 50%;
-    left: 50%;
-    border-radius: 10px;
-    backdrop-filter: blur(10px);
-    border: 2px solid rgba(255,255,255,0.1);
-    box-shadow: 0 0 40px rgba(8,7,16,0.6);
+    background-color: rgba(0, 0, 0, 0.13);
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    border-radius: 5px;
+    border: 3px solid rgba(250, 106, 4, 0.299);
+    box-shadow: 40px 40px 40px rgba(8,7,16,0.6);
     padding: 50px 35px;
 }
 form *{
@@ -75,7 +32,7 @@ label{
 input{
     display: block;
     height: 50px;
-    width: 100%;
+    width: 380px;
     background-color: rgba(255,255,255,0.07);
     border-radius: 3px;
     padding: 0 10px;
@@ -101,24 +58,16 @@ button{
 .social{
   margin-top: 30px;
   display: flex;
-  justify-content: space-between;
+    justify-content: center;
 }
 .social div{
-  background: red;
   width: 150px;
   border-radius: 3px;
   padding: 5px 10px 10px 5px;
-  background-color: rgba(255,255,255,0.27);
+  background-color: rgba(255, 115, 0, 0.27);
   color: #eaf0fb;
   text-align: center;
 }
 .social div:hover{
   background-color: rgba(255,255,255,0.47);
-}
-.social .fb{
-  margin-left: auto;
-  margin-right: auto;
-}
-.social i{
-  margin-right: 4px;
 }
