--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -22,7 +22,7 @@
           <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
         </button>
       }
-      <span><img src="../../../favicon.ico"></span>
+      <span>Web-Mozi</span>
     </mat-toolbar>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
