--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -1,23 +1,30 @@
 .sidenav-container {
   height: 100%;
+  background-color: rgb(23, 23, 23);
 }
 
 .sidenav {
   width: 200px;
+  background-color: rgb(23, 23, 23);  
 }
 
 .sidenav .mat-toolbar {
   background: inherit;
+  background-color: rgb(255, 136, 0);
 }
 
 .mat-toolbar.mat-primary {
   position: sticky;
   top: 0;
   z-index: 1000;
+  background-color: rgb(255, 136, 0);
 }
 img{
   width: 50px;
 }
 a.active{
-  border-bottom: solid 2px red;
+  border-bottom: solid 2px rgba(255, 136, 0, 0.621);
+}
+span{
+  color: black;
 }
