--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -7,8 +7,10 @@
     <mat-nav-list>
       <a mat-list-item routerLink="/home" routerLinkActive="active">Movies</a>
       <a mat-list-item routerLink="/shows" routerLinkActive="active">Shows</a>
-      <a mat-list-item routerLink="/login" routerLinkActive="active">Login</a>
-      <a mat-list-item routerLink="/register" routerLinkActive="active">Register</a>
+      <a mat-list-item routerLink="/profile" routerLinkActive="active" *ngIf="isSignedIn">Profile</a>
+      <a mat-list-item routerLink="/logout" routerLinkActive="active" *ngIf="isSignedIn">Log out</a>
+      <a mat-list-item routerLink="/login" routerLinkActive="active" *ngIf="isSignedOut">Login</a>
+      <a mat-list-item routerLink="/register" routerLinkActive="active" *ngIf="isSignedOut">Register</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
