--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,1 +1,4 @@
-<p>profile works!</p>
+<mat-tab-group>
+  <mat-tab label="Profile"><app-profile-thing></app-profile-thing></mat-tab>
+  <mat-tab label="Tickets"><app-tickets></app-tickets></mat-tab>
+</mat-tab-group>
