--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <form (submit)="login($event)">
     <h3>Login Here</h3>
 
-    <label for="username">Username</label>
+    <label for="email">email</label>
     <input type="text" placeholder="Email or Phone" id="username" [formControl]="email">
 
     <label for="password">Password</label>
