--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -60,3 +60,56 @@ body {
 .stats span {
     font-size: 29px;
 }
+
+
+.profile-card{
+    height: 600px;
+    width: 400px;
+    background-color: rgba(0, 0, 0, 0.13);
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    border-radius: 5px;
+    border: 3px solid rgba(255, 136, 0, 0.621);
+    box-shadow: 40px 40px 40px rgba(8,7,16,0.6);
+    padding: 50px 35px;
+}
+label{
+    display: block;
+    margin-top: 30px;
+    font-size: 16px;
+    font-weight: 500;
+}
+input{
+    display: block;
+    height: 40px;
+    width: 380px;
+    background-color: rgba(255,255,255,0.07);
+    border-radius: 3px;
+    padding: 0 10px;
+    margin-top: 8px;
+    font-size: 14px;
+    font-weight: 300;
+    color: white;
+}
+img{
+    width: 40%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.body button{
+    display: block;
+    width: 400px;
+    height: 40px;
+    background-color: #ff8800;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    font-size: 16px;
+    font-weight: 500;
+    margin-top: 50px;
+    cursor: pointer;
+}
