--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -2,23 +2,23 @@
   <mat-tab label="Profile">
 
     <div class="profile-card">
-      <form class="body" (submit)="change()">
+      <form class="body" (submit)="change($event)">
           <label class="profile-card__label">Name</label>
           <input type="text" class="profile-card__input" [formControl]="name">
   
           <label class="profile-card__label">Email</label>
           <input type="email" class="profile-card__input" [formControl]="email">
   
-          <label class="profile-card__label">Password</label>
-          <input type="password" class="profile-card__input" [formControl]="password">
-  
           <label class="profile-card__label">Phone</label>
           <input type="tel" class="profile-card__input" [formControl]="phone">
   
           <label class="profile-card__label">Address</label>
           <input type="text" class="profile-card__input" [formControl]="address">
-
-          <button class="profile-card__button">Save</button>
+          <div class="buttons">
+            <button class="profile-card__button">Save</button>
+            <button class="profile-card__button">Delete</button>
+          </div>
+          
       </form>
   </div>
 
