--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -61,7 +61,7 @@ body {
 
 
 .profile-card{
-    height: 600px;
+    height: 500px;
     width: 400px;
     background-color: rgba(0, 0, 0, 0.13);
     margin-left: auto;
@@ -98,16 +98,21 @@ img{
     margin-left: auto;
     margin-right: auto;
 }
-.body button{
+.buttons button{
     display: block;
-    width: 400px;
+    width: 45%;
     height: 40px;
-    background-color: #ff8800;
     border: none;
     border-radius: 5px;
+    background-color: rgba(255, 136, 0, 0.621);
     color: white;
     font-size: 16px;
     font-weight: 500;
-    margin-top: 50px;
+    margin-top: 20px;
     cursor: pointer;
+}
+.buttons{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
 }
