--- a/src/app/pages/home/movies/movies.component.scss
+++ b/src/app/pages/home/movies/movies.component.scss
@@ -19,3 +19,8 @@
 .dashboard-card-content {
   text-align: center;
 }
+
+mat-card-content{
+  padding-left: 200px;
+  background-color: transparent;
+}
