--- a/src/app/pages/home/movies/movies.component.scss
+++ b/src/app/pages/home/movies/movies.component.scss
@@ -4,16 +4,11 @@
 
 .dashboard-card {
   position: absolute;
-  top: 15px;
-  left: 15px;
-  right: 15px;
-  bottom: 15px;
-}
-
-.more-button {
-  position: absolute;
-  top: 5px;
-  right: 10px;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  
 }
 
 .dashboard-card-content {
@@ -21,6 +16,13 @@
 }
 
 mat-card-content{
-  padding-left: 200px;
-  background-color: transparent;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: auto;
+  width: 100%;
+  background-color: rgb(255, 153, 0);
+  color: black;
+  font-size: larger;
+
 }
+
