--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -10,6 +10,15 @@
     <label for="password-again">Password Again</label>
     <input type="password" placeholder="Password Again" id="password-again" [formControl]="confirmPassword">
 
+    <label for="name">Name</label>
+    <input type="text" placeholder="Name" id="name" [formControl]="name">
+
+    <label for="phone">Phone</label>
+    <input type="tel" placeholder="Phone" id="phone" [formControl]="phone">
+
+    <label for="address">Address</label>
+    <input type="text" placeholder="Address" id="address" [formControl]="address">
+
     <button type="submit">Register</button>
     <div class="social">
         <div class="fb" routerLink="/login" style="cursor: pointer;"><i class="fab"></i>Login</div>
