--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -15,8 +15,8 @@
           <label class="profile-card__label">Address</label>
           <input type="text" class="profile-card__input" [value]="address | async">
           <div class="buttons">
-            <button class="profile-card__button">Save</button>
-            <button class="profile-card__button" (click)="delete()">Delete</button>
+            <button class="profile-card__button" type="submit">Save</button>
+            <button class="profile-card__button" (click)="delete()" type="reset">Delete</button>
           </div>
           
       </form>
