--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -4,22 +4,23 @@
     <div class="profile-card">
       <form class="body" (submit)="change($event)">
           <label class="profile-card__label">Name</label>
-          <input type="text" class="profile-card__input" [value]="name | async">
+          <input type="text" class="profile-card__input" [value]="name | async" [formControl]="fname">
   
           <label class="profile-card__label">Email</label>
-          <input type="email" class="profile-card__input" [value]="email | async">
+          <input type="email" class="profile-card__input" [value]="email | async" [formControl]="femail">
   
           <label class="profile-card__label">Phone</label>
-          <input type="tel" class="profile-card__input" [value]="phone | async">
+          <input type="tel" class="profile-card__input" [value]="phone | async" [formControl]="fphone">
   
           <label class="profile-card__label">Address</label>
-          <input type="text" class="profile-card__input" [value]="address | async">
+          <input type="text" class="profile-card__input" [value]="address | async" [formControl]="faddress">
           <div class="buttons">
             <button class="profile-card__button" type="submit">Save</button>
-            <button class="profile-card__button" (click)="delete()" type="reset">Delete</button>
           </div>
-          
       </form>
+      <div class="buttons">
+        <button class="profile-card__button" id="delete-but" (click)="delete()" type="reset">Delete</button>
+      </div>
   </div>
 
   </mat-tab>
