--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -61,7 +61,7 @@ body {
 
 
 .profile-card{
-    height: 500px;
+    height: 600px;
     width: 400px;
     background-color: rgba(0, 0, 0, 0.13);
     margin-left: auto;
@@ -99,6 +99,8 @@ img{
     margin-right: auto;
 }
 .buttons button{
+    margin-left: auto;
+    margin-right: auto;
     display: block;
     width: 45%;
     height: 40px;
@@ -115,4 +117,9 @@ img{
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
+}
+#delete-but{
+    margin-top: 50px;
+    background-color: #ff0000 !important;
+    
 }
