--- a/src/app/pages/home/movies/movies.component.html
+++ b/src/app/pages/home/movies/movies.component.html
@@ -9,4 +9,7 @@
       </mat-card>
     </mat-grid-tile>
   </mat-grid-list>
+  <a routerLink="/home/add-movies" *ngIf="isAdmin">
+    <mat-icon class="add-icon">add</mat-icon>
+  </a>
 </div>
