--- a/src/app/pages/home/movies/movies.component.scss
+++ b/src/app/pages/home/movies/movies.component.scss
@@ -23,6 +23,26 @@ mat-card-content{
   background-color: rgb(255, 153, 0);
   color: black;
   font-size: larger;
-
 }
 
+.bottom-left-corner {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+}
+
+.grid-container {
+  margin: 20px;
+}
+
+mat-icon {
+  font-size: 50px;
+  height: auto;
+  width: auto;
+  bottom: 0;
+  position: sticky;
+  color: rgb(255, 153, 0);
+  background-color: rgba(255, 255, 255, 0.589);
+  border-radius: 30px;
+  border: none;
+}
