--- a/src/app/pages/home/movies/add-movies/add-movies.component.html
+++ b/src/app/pages/home/movies/add-movies/add-movies.component.html
@@ -1,22 +1,22 @@
-<form>
+<form (submit)="upload($event)">
     <div>
         <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
+        <input type="text" id="name" name="name" required [formControl]="nameText">
     </div>
     
     <div>
         <label for="duration">Duration:</label>
-        <input type="text" id="duration" name="duration" pattern="[0-9]+" required placeholder="The duration of the movie in minutes">
+        <input type="text" id="duration" name="duration" pattern="[0-9]+" required placeholder="The duration of the movie in minutes" [formControl]="durationNumber">
     </div>
     
     <div>
-        <label for="picture">Picture:</label>
-        <input type="file" id="picture" name="picture" accept="image/*" required>
+        <label for="image">Picture:</label>
+        <input type="file" id="file" name="image" accept="image/*" required #moviePhoto (change)="uploadPicture($event)" autocomplete="off">
     </div>
     
     <div>
         <label for="releaseDate">Release Date:</label>
-        <input type="date" id="releaseDate" name="releaseDate" required>
+        <input type="date" id="releaseDate" name="releaseDate" required [formControl]="releaseDateText">
     </div>
     
     <button type="submit">Submit</button>
