--- a/src/app/pages/shows/seats/seats.component.html
+++ b/src/app/pages/shows/seats/seats.component.html
@@ -1,7 +1,13 @@
 <div *ngIf="!selectedShow; else showDetails">Please select a show!</div>
   
 <ng-template #showDetails>
-  <div *ngFor="let seat of selectedShow?.seats; let i = index" [class.selected]="isSelected(i)"  class="seat" (click)="selectSeat(i)">
-    Seat {{i + 1}}
-  </div>
+  <div *ngFor="let seat of selectedShow?.seats; let i = index" 
+     [class.selected]="isSelected(i)"  
+     [class.taken]="!seat" 
+     [style.pointer-events]="seat ? 'auto' : 'none'" 
+     class="seat" 
+     (click)="seat && selectSeat(i)">
+  {{selectedShow && selectedShow.seats[i] ? 'Seat ' + (i+1) : 'Taken'}}
+</div>
+<button (click)="book()">Book</button>
 </ng-template>
