--- a/src/app/pages/shows/shows-dashboard/shows-dashboard.component.html
+++ b/src/app/pages/shows/shows-dashboard/shows-dashboard.component.html
@@ -6,7 +6,7 @@
         <mat-card class="dashboard-card">
           <mat-card-header>
             <mat-card-title>
-              <mat-radio-button (click)="selectShow(card)">{{card.title}}</mat-radio-button>
+              <mat-radio-button (click)="selectShow(card.id)">{{card.title}}</mat-radio-button>
             </mat-card-title>
             <mat-card-content style="padding-top: 10px">
               {{card.time}}
