--- a/src/app/pages/shows/seats/seats.component.scss
+++ b/src/app/pages/shows/seats/seats.component.scss
@@ -27,3 +27,16 @@
 .taken {
   background-color: red !important;
 }
+
+button {
+  margin-top: 20px;
+  padding: 10px 20px;
+  border: none;
+  background-color: #4a4a4a;
+  color: white;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 5px;
+  display: block;
+  margin: auto;
+}
