--- a/src/app/pages/home/movies/add-movies/add-movies.component.html
+++ b/src/app/pages/home/movies/add-movies/add-movies.component.html
@@ -6,7 +6,7 @@
     
     <div>
         <label for="duration">Duration:</label>
-        <input type="text" id="duration" name="duration" pattern="[0-9]+" required placeholder="The duration of the movie in minutes" [formControl]="durationNumber">
+        <input type="number" id="duration" name="duration" pattern="[0-9]+" required placeholder="The duration of the movie in minutes" [formControl]="durationNumber">
     </div>
     
     <div>
